# gg-ml-resilience-mriia

./: .env.sample  .gitignore  README.md  check_models.py  debug_models.py  demo_consent_emails.csv  docker-compose.yml  pyproject.toml  teachers_example.csv  test_consent_sample.csv
.github/workflows/: deploy.yml
config/: settings.py  urls.py
core/: admin.py  constants.py  models.py  urls.py  views.py
core/migrations/: 0001_enable_pgvector.py  0002_initial.py  0003_analysisrequest.py
deploy/: deploy.sh  ml-resilience-gunicorn.service  nginx.conf
docs/: Google forms.md  TEAM.md  deployment.md  project-planning.md  references_toolkits_resilience.docx
docs/knowledge-base-review/: family-support.md
rag_pipeline/: admin.py  apps.py  constants.py  container.py  models.py  protocols.py  rag_service.py  urls.py  views.py
rag_pipeline/data_ingestion/: pipeline.py
rag_pipeline/embedding/: openai_embedding_service.py  protocols.py
rag_pipeline/llm/: openai_llm_service.py  prompt_builder.py  protocols.py
rag_pipeline/migrations/: 0001_document.py  0001_initial.py  0002_alter_documentchunk_resilience_factor_and_more.py  0002_documentchunk_knowledgesource_alter_document_options_and_more.py  0002_documentchunk_resilience_factor.py  0003_add_chunk_metadata_fields.py  0003_alter_documentchunk_options_and_more.py  0003_documentchunk_category_and_more.py  0003_knowledgesource_category_and_more.py  0004_alter_document_source.py
rag_pipeline/models/: __init__.py  constants.py  document.py  knowledge_source.py
rag_pipeline/retrieval/: __init__.py  container.py  dtos.py  faiss_index.py  protocol.py  (+4 more)
raw_sources/: README.md
resilience_app/: admin.py  apps.py  async_recommendation_service.py  constants.py  container.py  forms.py  models.py  notifications.py  protocols.py  recommendation_service.py  scoring.py  teacher_ids.py  tests.py  urls.py  views.py
(+45 files in other folders)
