[project]
name = "ml-resilience-mriia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.0.0",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "faiss-cpu>=1.11.0",
    "numpy>=2.0",
    "openai>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]

[tool.ruff.lint.isort]
known-third-party = ["django", "faiss", "openai", "pgvector"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
