[project]
name = "ml-resilience-mriia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.0.0",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "openai>=1.0.0",
    "psycopg[binary]>=3.3.3",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]

[tool.ruff.lint.isort]
known-third-party = ["django", "openai"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
